amenities alignment fix

--- a/src/app/amenities/amenities.component.css
+++ b/src/app/amenities/amenities.component.css
@@ -2,7 +2,7 @@ h4{
     margin-left: 5%;
 }
 table{
-    margin-left: 5%;
+
     margin-bottom: 20px;
 }
 td{
@@ -49,17 +49,14 @@ h5{
 
 
 @media screen and (min-width: 601px) {
-    .amen{
-        margin-left: 5%;
-  }
 
-  .serv{
-    margin-left: 5%;
-}
 
 .row{
     padding: 10px;
     margin: auto;
+}
+.tables{
+    max-width: 900px;
 }
 
 }
@@ -82,6 +79,7 @@ h5{
     
     
     }
+
     #carouselExampleCaptions{
         padding: 0;
       
